--- a/MessageQueueBasic/mainwindow.ui
+++ b/MessageQueueBasic/mainwindow.ui
@@ -17,53 +17,47 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>80</y>
+      <x>260</x>
+      <y>200</y>
       <width>75</width>
-      <height>23</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>Add Item</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QSpinBox" name="spinBox">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>150</y>
-      <width>47</width>
-      <height>12</height>
+      <x>160</x>
+      <y>200</y>
+      <width>81</width>
+      <height>31</height>
      </rect>
     </property>
-    <property name="text">
-     <string>TextLabel</string>
+   </widget>
+   <widget class="QTextEdit" name="textEdit">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>200</y>
+      <width>104</width>
+      <height>31</height>
+     </rect>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>10</y>
+      <x>280</x>
+      <y>130</y>
       <width>75</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_3">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>180</y>
-      <width>75</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>PushButton</string>
+     <string>Initial </string>
     </property>
    </widget>
   </widget>
